Attempt to fix stylesheet so it will work on safari

--- a/app/assets/stylesheets/dta/dta.css.scss
+++ b/app/assets/stylesheets/dta/dta.css.scss
@@ -176,7 +176,7 @@ div.search_select_wrapper {
   display: inline-block;
   min-width:300px;
   min-height:100px;
-  margin-top:-35px;
+  margin-top:0px;
 
   margin-left: 5px;
   overflow: hidden;
